# thuai-8-agent-rust

./: Cargo.toml
.github/workflows/: doc.yml
src/: agent.rs  lib.rs  logic.rs  main.rs
src/agent/: connection.rs  model.rs  player_api.rs  state.rs
