[package]
name = "thuai-8-agent-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] } 
strum = { version = "0.27.1", features = ["derive"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"
